--- a/views/writepost.ejs
+++ b/views/writepost.ejs
@@ -13,7 +13,7 @@
             <form action="/publishpost" method="post">
                 <div class="input-group">
                     <input type="text" name="author" required>
-                    <span class="label">Your Name (Lol)</span>
+                    <span class="label">Your Name</span>
                 </div>
                 <div class="input-group">
                     <input type="text" name="title" required>
